--- a/BlazorAuthenticationDemo/Client/Shared/NavMenu.razor
+++ b/BlazorAuthenticationDemo/Client/Shared/NavMenu.razor
@@ -22,6 +22,10 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
+        <NavLink class="list-group-item list-group-item-action bg-light"
+                 href="authentication/login">
+            <span class="oi oi-list-rich" aria-hidden="true"></span> Log In
+        </NavLink>
     </ul>
 </div>
 
